[workspace.package]
version = "1.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/astranetworld/rast"
repository = "https://github.com/astranetworld/rast"
exclude = [".github/"]

[workspace]
members = [
    "bin/rast/",
    "crates/primitives/",
    "crates/primitives-traits/", 
    "crates/storage/db/",
    "crates/storage/db-api",
    "crates/storage/storage-api/",
    "crates/rpc/rpc-types-compat",
    "crates/chain-state",
    "crates/trie/trie",
    "crates/trie/db",
    "crates/rpc/rpc-eth-types",
    "crates/ethereum/payload",
    "crates/consensus/auto-seal",
    "crates/engine/util",
    "crates/rpc/rpc-eth-api",
    "crates/exex/exex",
]
default-members = ["bin/rast"]


# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_struct_initialization = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
strip = false

# Make sure debug symbols are in the bench profile
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.'https://github.com/paradigmxyz/reth.git']
reth-chainspec = { path = "crates/chainspec" }
reth-primitives = { path = "crates/primitives" }
reth-primitives-traits = { path = "crates/primitives-traits" }
reth-node-api = { path = "crates/node/api" }
reth-node-builder = { path = "crates/node/builder" }
reth-node-core = { path = "crates/node/core" }
reth-node-events = { path = "crates/node/events" }
reth-node-metrics = { path = "crates/node/metrics" }
reth-provider = { path = "crates/storage/provider" }
reth-db = {path = "crates/storage/db" }
reth-db-api={path = "crates/storage/db-api"}
reth-storage-api={path="crates/storage/storage-api"}
reth-rpc-types-compat={path="crates/rpc/rpc-types-compat"}
reth-chain-state={path="crates/chain-state"}
reth-trie={path="crates/trie/trie"}
reth-trie-db={path="crates/trie/db"}
reth-rpc-eth-types={path="crates/rpc/rpc-eth-types"}
reth-ethereum-payload-builder={path="crates/ethereum/payload"}
reth-auto-seal-consensus={path="crates/consensus/auto-seal"}
reth-engine-util={path="crates/engine/util"}
reth-rpc-eth-api={path="crates/rpc/rpc-eth-api"}
reth-exex={path="crates/exex/exex"}

[patch.crates-io]
alloy-genesis = { path = "./crates/alloy-genesis" }

[workspace.dependencies]

reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-bench = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-blockchain-tree-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-config = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-engine-service = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-engine-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-etl = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-evm-optimism = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-metrics-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-nippy-jar = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-node-optimism = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false, features = ["std"] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-api-testing-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-static-file = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }

# revm
revm = { version = "13.0.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-inspectors = "0.5"
revm-primitives = { version = "8.0.0", features = [
    "std",
], default-features = false }

# eth
alloy-chains = "0.1.18"
alloy-dyn-abi = "0.7.2"
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-rlp = "0.3.4"
alloy-sol-types = "0.7.2"
alloy-trie = { version = "0.4", default-features = false }

alloy-consensus = { version = "0.2.1", default-features = false }
alloy-eips = { version = "0.2.1", default-features = false }
alloy-genesis = { version = "0.2.1", default-features = false }
alloy-json-rpc = { version = "0.2.1", default-features = false }
alloy-network = { version = "0.2.1", default-features = false }
alloy-node-bindings = { version = "0.2.1", default-features = false }
alloy-provider = { version = "0.2.1", features = ["reqwest"], default-features = false }
alloy-pubsub = { version = "0.2.1", default-features = false }
alloy-rpc-client = { version = "0.2.1", default-features = false }
alloy-rpc-types = { version = "0.2.1", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "0.2.1", default-features = false }
alloy-rpc-types-anvil = { version = "0.2.1", default-features = false }
alloy-rpc-types-beacon = { version = "0.2.1", default-features = false }
alloy-rpc-types-engine = { version = "0.2.1", default-features = false }
alloy-rpc-types-eth = { version = "0.2.1", default-features = false }
alloy-rpc-types-mev = { version = "0.2.1", default-features = false }
alloy-rpc-types-trace = { version = "0.2.1", default-features = false }
alloy-rpc-types-txpool = { version = "0.2.1", default-features = false }
alloy-serde = { version = "0.2.1", default-features = false }
alloy-signer = { version = "0.2.1", default-features = false }
alloy-signer-local = { version = "0.2.1", default-features = false }
alloy-transport = { version = "0.2.1" }
alloy-transport-http = { version = "0.2.1", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "0.2.1", default-features = false }
alloy-transport-ws = { version = "0.2.1", default-features = false }

# op
op-alloy-rpc-types = "0.1"

# misc
aquamarine = "0.5"
auto_impl = "1"
backon = "0.4"
bitflags = "2.4"
boyer-moore-magiclen = "0.2.16"
bytes = "1.5"
clap = "4"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
dashmap = "6.0"
derive_more = "0.99.17"
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
generic-array = "0.14"
humantime = "2.1"
humantime-serde = "1.1"
itertools = "0.13"
linked_hash_set = "0.1"
modular-bitfield = "0.11.2"
nybbles = "0.2.1"
once_cell = "1.19"
parking_lot = "0.12"
paste = "1.0"
rand = "0.8.5"
rayon = "1.7"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = { version = "0.10", default-features = false }
shellexpand = "3.0.0"
smallvec = "1"
strum = { version = "0.26", default-features = false }
syn = "2.0"
thiserror = "1.0"
thiserror-no-std = { version = "2.0.2", default-features = false }
tracing = "0.1.0"
tracing-appender = "0.2"
url = "2.3"
zstd = "0.13"

# metrics
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = "0.17.0"

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# tokio
tokio = { version = "1.39", default-features = false }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = "1.3"
hyper-util = "0.1.5"
pin-project = "1.0.12"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.5"

# p2p
discv5 = "0.6.0"

# rpc
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"

# http
http = "1.0"
http-body = "1.0"
jsonwebtoken = "9"
proptest-arbitrary-interop = "0.1.0"

# crypto
enr = { version = "0.12.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

# for eip-4844
c-kzg = "1.0.0"

# config
confy = "0.6"
toml = "0.8"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = "0.5"
iai-callgrind = "0.11"
pprof = "0.13"
proptest = "1.4"
proptest-derive = "0.5"
serial_test = "3"
similar-asserts = "1.5.0"
tempfile = "3.8"
test-fuzz = "5"
