[package]
name = "clique"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]

ethereum-types = "0.14" 
rand = "0.8" 
types = "0.1" 
unexpected = "0.1" 
log = "0.4"  
hash-db = "0.16.0"
keccak-hash = "0.10.0"
rlp = "0.4"
itertools = "0.13.0"
derive_more = "0.14.0"
lazy_static = "1.4" 
lru-cache = "0.1"
lru = "0.7" 
parking_lot = "0.7.1"
primitive-types = "0.3.0"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
num-bigint = "0.4" 
k256 = "0.11"  
secp256k1 = { version = "0.26", features = ["recovery"] }
tiny-keccak = "2.0"
alloy-genesis = "0.2.1"
uint = "0.9"
blst = "0.3.13"
sha3 = "0.10"
sled = "0.34.7"


reth-primitives-traits = {git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5", default-features = false, features = ["std"]  }
reth-consensus = {git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.5" }





[lints]
workspace = true

