[package]
name = "clique"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]



types = "0.1" 
unexpected = "0.1" 

hash-db = "0.16.0"
keccak-hash = "0.10.0"
itertools = "0.13.0"
derive_more = "0.14.0"
lazy_static = "1.4" 

parking_lot = "0.7.1"
primitive-types = "0.3.0"
hex-literal = "0.3"
num-bigint = "0.4"
tiny-keccak = "2.0"
uint = "0.9"
sled = "0.34.7"


rlp = "0.4"
alloy-rlp.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
rand.workspace = true
blst.workspace = true
secp256k1  = { workspace = true, features = ["recovery"] }
sha2.workspace = true
sha3 = "0.10.5"
# rast
rast-primitives.workspace = true

alloy-serde.workspace = true
# serde
bytes.workspace = true
serde.workspace = true

schnellru.workspace = true
#lru-cache = "0.1"
#lru = "0.7"
tracing.workspace = true
#log = "0.4"

#reth
reth-primitives-traits.workspace = true
reth-primitives = { workspace = true, default-features = false, features = ["std"] }
reth-consensus.workspace = true
reth-beacon-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true

# arbitrary utils
arbitrary = { workspace = true, features = ["derive"], optional = true }

[lints]
workspace = true

